verge of making workflow sundar.
added the api call in template fragment.
confirmation fragment page to be implemented as it is not making any api call. shows a 404.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,4 +25,9 @@
         android:name="com.teamdefine.signease.confirmation.ConfirmationFragment"
         android:label="fragment_confirmation"
         tools:layout="@layout/fragment_confirmation" />
+    <fragment
+        android:id="@+id/templateFragment"
+        android:name="com.teamdefine.signease.templates.TemplateFragment"
+        android:label="fragment_template"
+        tools:layout="@layout/fragment_template" />
 </navigation>
