this is why you don't do commits at 1 am added date field for templates, added updated time field in Template, converted the long timestamp into date, changed the arraylist type where templates would be stored.

--- a/app/src/main/res/layout/itemtemplate.xml
+++ b/app/src/main/res/layout/itemtemplate.xml
@@ -1,30 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="70dp">
+    android:layout_height="100dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="15dp"
+    android:layout_marginEnd="10dp"
+    android:focusable="true"
+    app:cardBackgroundColor="@color/blue"
+    app:cardCornerRadius="10dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
-    <com.google.android.material.card.MaterialCardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:focusable="true"
-        app:cardBackgroundColor="@color/light_blue"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:fontFamily="@font/sharp_grotesk_light20"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/sharp_grotesk_medium20"
             android:gravity="center_vertical"
             android:text="TextView"
-            android:textSize="20sp" />
-    </com.google.android.material.card.MaterialCardView>
+            android:textColor="@color/white"
+            android:textSize="25sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/templateDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_marginStart="10dp"
+            android:fontFamily="@font/sharp_grotesk_light20"
+            android:textColor="@color/white"
+
+            />
+    </LinearLayout>
+</com.google.android.material.card.MaterialCardView>
