--- a/app/src/main/res/layout/item_signing_requests.xml
+++ b/app/src/main/res/layout/item_signing_requests.xml
@@ -16,11 +16,11 @@
             android:id="@+id/nameOfRequest"
             android:layout_width="300dp"
             android:layout_height="35dp"
+            android:layout_marginStart="15dp"
             android:ellipsize="end"
             android:fontFamily="@font/sharp_grotesk_medium20"
             android:gravity="center|start"
             android:maxLines="1"
-            android:layout_marginStart="15dp"
             android:text="Application For Duty Leave"
             android:textSize="18dp" />
 
@@ -35,18 +35,18 @@
         <!--            app:srcCompat="@drawable/hourglass" />-->
 
 
-        <TextView
-            android:id="@+id/optionsMenu"
-            android:layout_width="20dp"
-            android:layout_height="30dp"
-            android:layout_alignTop="@+id/nameOfRequest"
-            android:layout_alignBottom="@+id/timeOfRequest"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:gravity="center"
-            android:text="⋮"
-            android:textAppearance="?android:textAppearanceLarge"
-            android:textStyle="bold" />
+        <!--        <TextView-->
+        <!--            android:id="@+id/optionsMenu"-->
+        <!--            android:layout_width="20dp"-->
+        <!--            android:layout_height="30dp"-->
+        <!--            android:layout_alignTop="@+id/nameOfRequest"-->
+        <!--            android:layout_alignBottom="@+id/timeOfRequest"-->
+        <!--            android:layout_alignParentTop="true"-->
+        <!--            android:layout_alignParentEnd="true"-->
+        <!--            android:gravity="center"-->
+        <!--            android:text="⋮"-->
+        <!--            android:textAppearance="?android:textAppearanceLarge"-->
+        <!--            android:textStyle="bold" />-->
 
         <TextView
             android:id="@+id/timeOfRequest"
