--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -35,6 +35,21 @@
             android:text="Download"
             android:textAllCaps="false"
             app:cornerRadius="10dp" />
+
+        <Button
+            android:id="@+id/deleteButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/downloadButton"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:backgroundTint="#0061fe"
+            android:fontFamily="@font/sharp_grotesk_medium20"
+            android:text="Delete"
+            android:textAllCaps="false"
+            app:cornerRadius="10dp" />
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
