--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -87,6 +87,7 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@id/view"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toEndOf="@id/totalRequests"
         app:layout_constraintTop_toTopOf="@id/totalRequests" />
 
@@ -107,7 +108,7 @@
         android:id="@+id/totalRequests"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="32dp"
         android:fontFamily="@font/sharp_grotesk_medium20"
         android:gravity="center"
         android:textColor="@color/white"
@@ -116,6 +117,7 @@
         app:layout_constraintBottom_toBottomOf="@id/view"
         app:layout_constraintStart_toStartOf="@id/view"
         app:layout_constraintTop_toTopOf="@id/view"
+        app:layout_constraintVertical_bias="0.507"
         tools:text="15" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
