--- a/app/src/main/res/layout/item_signing_requests.xml
+++ b/app/src/main/res/layout/item_signing_requests.xml
@@ -50,16 +50,28 @@
 
         <TextView
             android:id="@+id/timeOfRequest"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/nameOfRequest"
             android:layout_alignStart="@id/nameOfRequest"
-            android:layout_alignEnd="@+id/nameOfRequest"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/sharp_grotesk_light20"
             android:gravity="center|start"
             android:text="13:05 PM"
             android:textSize="12dp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:id="@+id/statusButton"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/nameOfRequest"
+            android:layout_alignTop="@id/timeOfRequest"
+            android:layout_alignBottom="@id/timeOfRequest"
+            android:scaleType="fitCenter"
+            android:layout_marginStart="5dp"
+            android:layout_toEndOf="@+id/timeOfRequest"
+            android:src="@drawable/radio_button"
+            app:tint="#FDD017" />
 
     </RelativeLayout>
 
