--- a/app/src/main/res/layout/itemtemplate.xml
+++ b/app/src/main/res/layout/itemtemplate.xml
@@ -22,25 +22,26 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp"
+            android:ellipsize="end"
             android:fontFamily="@font/sharp_grotesk_medium20"
             android:gravity="center_vertical"
+            android:maxLines="1"
             android:text="TextView"
             android:textColor="@color/white"
-            android:textSize="25sp" />
+            android:textSize="22sp" />
 
         <TextView
             android:id="@+id/templateDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:fontFamily="@font/sharp_grotesk_light20"
-            android:textColor="@color/white"
-
-            />
+            android:textColor="@color/white" />
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
