--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F1F9FF"
     tools:context=".homepage.HomePageFragment">
 
     <androidx.constraintlayout.widget.Guideline
@@ -108,16 +109,15 @@
         android:id="@+id/totalRequests"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:fontFamily="@font/sharp_grotesk_medium20"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/view"
+        app:layout_constraintEnd_toStartOf="@id/signReqYouSent"
         app:layout_constraintStart_toStartOf="@id/view"
         app:layout_constraintTop_toTopOf="@id/view"
-        app:layout_constraintVertical_bias="0.507"
         tools:text="15" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
