--- a/app/src/main/res/layout/item_signing_requests.xml
+++ b/app/src/main/res/layout/item_signing_requests.xml
@@ -64,14 +64,11 @@
             android:id="@+id/statusButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/nameOfRequest"
-            android:layout_alignTop="@id/timeOfRequest"
+            android:layout_alignTop="@id/nameOfRequest"
             android:layout_alignBottom="@id/timeOfRequest"
-            android:layout_marginStart="5dp"
-            android:layout_toEndOf="@+id/timeOfRequest"
-            android:scaleType="fitCenter"
-            android:src="@drawable/radio_button"
-            app:tint="#FDD017" />
+            android:layout_alignParentEnd="true"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter" />
 
     </RelativeLayout>
 
