--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="light_blue">#b4d0e7</color>
     <color name="grey">#808080</color>
     <color name="red">#FF0000</color>
+    <color name="yellow">#FFBF00</color>
+    <color name="green">#008000</color>
 </resources>
