ux left the chat, still i don't need the designer!! logo removed, sign out button implemented

--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.02" />
+        app:layout_constraintGuide_begin="18dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/con2"
@@ -53,17 +53,12 @@
         app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
 
     <ImageView
-        android:id="@+id/logo"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="20dp"
-        android:src="@drawable/logo_temp"
-        app:layout_constraintBottom_toBottomOf="@id/yourStats"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/yourStats"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/logOut"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/logout"
+        app:layout_constraintEnd_toEndOf="@id/view"
+        app:layout_constraintTop_toTopOf="@id/con1" />
 
     <View
         android:id="@+id/view"
@@ -151,6 +146,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/con3"
         app:tint="@color/white" />
+
 
     <ProgressBar
         android:id="@+id/progressBar"
